# py-vgdl

./: LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
examples/: README.md
examples/continuousphysics/: left_to_right.txt  platformer.txt
examples/gridphysics/: gapworld.py  gapworld.txt
examples/humanplay/: controls.py  human.py  list_envs.py  play_vgdl.py
examples/pybrain/: gapworld.py
vgdl/: __init__.py  ai.py  core.py  mdp.py  model.py  ontology.py  parser.py  registration.py  state.py  tools.py
vgdl/games/: README.md  boulderdash.txt  chase.txt  frogs.txt  missilecommand.txt  missilecommand_lvl0.txt  portals.txt  sokoban.txt  survivezombies.txt  zelda.txt
vgdl/interfaces/: pybrain.py
vgdl/interfaces/gym/: README.md  __init__.py  env.py  list_space.py  register_samples.py  state.py
vgdl/ontology/: __init__.py  avatars.py  effects.py  physics.py  sprites.py  terminations.py
vgdl/render/: __init__.py  pygame.py  sprites.py
vgdl/util/: helpers.py
vgdl/util/humanplay/: controls.py  human.py  list_envs.py  play_vgdl.py
vgdl/util/traces/vgdl_1-v0/: 11-02-2019-11-05-15.pkl
