[metadata]
name = vgdl
description = VGDL 2: a video game description language for AI research
author = Ruben Vereecken
author-email = ruben.vereecken@gmail.com
license = BSD
project_urls =
  Source Code = https://github.com/rubenvereecken/py-vgdl

[files]
packages =
  vgdl
data_files =
  games = vgdl/games/*
  sprites = vgdl/sprites/*

[extras]
gym =
  gym
pybrain =
  pybrain
human =
  gym
  gym_recording
all =
  gym
  pybrain
  gym_recording
